# tree-sitter-taskr

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  taskrfile  testfile  tree-sitter.json
bindings/c/: tree-sitter-taskr.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_taskr/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTaskr/: taskr.h
bindings/swift/TreeSitterTaskrTests/: TreeSitterTaskrTests.swift
queries/: highlights.scm
queries/taskr/: highlights.scm
queries/taskrfile/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/: doc.txt
test/corpus/: comments.txt  complete.txt  environment.txt  tasks.txt
